--- a/home.html
+++ b/home.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head><title>Home</title></head>
+<head><title>Home</title>
+<style>
+  h1 img
+  {
+    
+      width: 75px;
+      height: 25px;
+      margin-right: 8px;
+  
+  }
+</style>
+
+</head>
 <body>
 <center>
   <h2>Welcome Learners</h2>
@@ -14,6 +26,8 @@
 <br/>
 <br/>
   <h1 style="color:red; font-size: 50px;">click on Menu to access the materials</h1>
+
+  <h1 style="color:rgb(0, 13, 255); font-size: 50px; font-weight: bold;"><img src="new.gif" alt="Fun GIF">Managerial Economics- Demand Analysis is live now <img src="new.gif" alt="Fun GIF"></h1>
 </center>
 </body>
 </html>
