--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
 <br/>
   <h1 style="color:red; font-size: 30px;">click on Menu to access the materials</h1>
 
-  <h1 style="color:rgb(0, 13, 255); font-size: 40px; font-weight: bold;"><img src="new.gif" alt="Fun GIF">Managerial Economics- Cost concept and Production Theory is live now <img src="new.gif" alt="Fun GIF"></h1>
+  <h1 style="color:rgb(0, 13, 255); font-size: 40px; font-weight: bold;"><img src="new.gif" alt="Fun GIF">Managerial Economics- All module is live now <img src="new.gif" alt="Fun GIF"></h1>
 </center>
 </body>
 </html>
