added all modules of Principal of Accounting

--- a/home.html
+++ b/home.html
@@ -27,7 +27,22 @@
 <br/>
   <h1 style="color:red; font-size: 30px;">click on Menu to access the materials</h1>
 
-  <h1 style="color:rgb(0, 13, 255); font-size: 40px; font-weight: bold;"><img src="new.gif" alt="Fun GIF">Managerial Economics- All module is live now <img src="new.gif" alt="Fun GIF"></h1>
+  <h1 style="color:rgb(0, 13, 255); font-size: 40px; font-weight: bold;"><img src="new.gif" alt="Fun GIF">Princiapl of Accounting- All module is live now <img src="new.gif" alt="Fun GIF"></h1>
+
+
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<h3 style="color:red; font-size: 12px;">Disclaimer 1: This is AI generated question based on ebook of subject and means for practise only.</h3>
+<h2 style="color:red; font-size: 14px;">Disclaimer 2: We cannot gaurantee of matching of question in MBA exam or passing of subject based on these questions</h2>
+<h1 style="color:red; background-color: yellow; font-size: 20px;">Disclaimer 3: Responsibility for any outcomes lies solely with the reader. The creator holds no accountability. Kindly proceed at your own discretion</h1>
 </center>
 </body>
 </html>
