--- a/index.html
+++ b/index.html
@@ -108,6 +108,26 @@
         
       </ul>
     </li>
+    <li>
+      <a href="#">Sem 1- Pricipals of Accounting</a>
+      <ul>
+        <li>
+          <a href="ac/mod1/AC-module1.html" target="content-frame" >Introduction of Accounting</a>
+        </li>
+        <li>
+          <a href="ac/mod2/AC-module2.html" target="content-frame" >Primary Books (Journal)</a>
+        </li>
+        <li>
+          <a href="ac/mod3/AC-module3.html" target="content-frame" >Subsidiary Books </a>
+        </li>
+        <li>
+          <a href="ac/mod4/AC-module4.html" target="content-frame" >Trail Balance </a>
+        </li>
+        <li>
+          <a href="ac/mod5/AC-module5.html" target="content-frame" >Final Accounts </a>
+        </li>
+      </ul>
+    </li>
     <!--<li><a href="#">About Us</a></li>
     <li>
       <a href="#">Services</a>
