--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     .sidebar li {
       position: relative;
+  
     }
 
     .sidebar a {
@@ -34,6 +35,8 @@
       color: white;
       padding: 12px 20px;
       text-decoration: none;
+      background-color: #515254;
+      border-bottom: 1px dotted white;
     }
 
     .sidebar a:hover {
@@ -79,7 +82,7 @@
 
 <div class="sidebar">
   <ul>
-    <li><a href="home.html" target="content-frame" >MBA</a></li>
+    <li><a href="home.html" target="content-frame" >Home</a></li>
     <li>
       <a href="#">Sem 1- Managerial Economics</a>
       <ul>
@@ -109,7 +112,7 @@
       </ul>
     </li>
     <li>
-      <a href="#">Sem 1- Pricipals of Accounting</a>
+      <a href="#">Sem 1- Principals of Accounting</a>
       <ul>
         <li>
           <a href="ac/mod1/AC-module1.html" target="content-frame" >Introduction of Accounting</a>
@@ -125,6 +128,26 @@
         </li>
         <li>
           <a href="ac/mod5/AC-module5.html" target="content-frame" >Final Accounts </a>
+        </li>
+      </ul>
+    </li>
+    <li>
+      <a href="#">Sem 1- Principals of  Management</a>
+      <ul>
+        <li>
+          <a href="im/mod1/IM-module1.html" target="content-frame" >Introduction of Management</a>
+        </li>
+        <li>
+          <a href="im/mod2/IM-module2.html" target="content-frame" >Evolution of Management</a>
+        </li>
+        <li>
+          <a href="im/mod3/IM-module3.html" target="content-frame" >Social and Ethical Responsibilities </a>
+        </li>
+        <li>
+          <a href="im/mod4/IM-module4.html" target="content-frame" >Span of Contorl </a>
+        </li>
+        <li>
+          <a href="im/mod5/IM-module5.html" target="content-frame" >Managerial Decisions </a>
         </li>
       </ul>
     </li>
