ob and qt updated

--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
 <br/>
   <h1 style="color:red; font-size: 30px;">click on Menu to access the materials</h1>
 
-  <h1 style="color:rgb(0, 13, 255); font-size: 40px; font-weight: bold;"><img src="new.gif" alt="Fun GIF">Principal of Management- All module is live now <img src="new.gif" alt="Fun GIF"></h1>
+  <h1 style="color:rgb(0, 13, 255); font-size: 40px; font-weight: bold;"><img src="new.gif" alt="Fun GIF">Organizational Behaviour and Qunatitative Techniques- All module is live now <img src="new.gif" alt="Fun GIF"></h1>
 
 
 <br/>
