--- a/index.html
+++ b/index.html
@@ -151,6 +151,46 @@
         </li>
       </ul>
     </li>
+    <li>
+      <a href="#">Sem 1- Organizational Behaviour</a>
+      <ul>
+        <li>
+          <a href="ob/mod1/OB-module1.html" target="content-frame" >Introduction</a>
+        </li>
+        <li>
+          <a href="ob/mod2/OB-module2.html" target="content-frame" >Diversity</a>
+        </li>
+        <li>
+          <a href="ob/mod3/OB-module3.html" target="content-frame" >Managing Teams </a>
+        </li>
+        <li>
+          <a href="ob/mod4/OB-module4.html" target="content-frame" >Power politics </a>
+        </li>
+        <li>
+          <a href="ob/mod5/OB-module5.html" target="content-frame" >HRM and Entre. </a>
+        </li>
+      </ul> 
+    </li>
+    <li>
+      <a href="#">Sem 1- Quantitative Techniques</a>
+      <ul>
+        <li>
+          <a href="qt/mod1/QT-module1.html" target="content-frame" >Stattistics</a>
+        </li>
+        <li>
+          <a href="qt/mod2/QT-module2.html" target="content-frame" >Classification of Data</a>
+        </li>
+        <li>
+          <a href="qt/mod3/QT-module3.html" target="content-frame" >Tabulation</a>
+        </li>
+        <li>
+          <a href="qt/mod4/QT-module4.html" target="content-frame" >Presentation </a>
+        </li>
+        <li>
+          <a href="qt/mod5/QT-module5.html" target="content-frame" >Measurement </a>
+        </li>
+      </ul>
+    </li>
     <!--<li><a href="#">About Us</a></li>
     <li>
       <a href="#">Services</a>
